# BoidWorld

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: block.py  boids.py  calcs.py  main.py  spawner.py  summoner.py
